filing/css/styles.css
/* ... */
nav ul li {
	display: inline;
	font-size: 18px;
}

nav a {
	text-decoration: none;
	opacity: 0.8;
}

nav a:hover {
	opacity: 0.4;
	text-decoration: none;
}

.URL {
	text-transform: uppercase;
	margin-right: 15%;
}

.anchor {
	float: right;
	margin-left: 10%;
}

.home header {
	max-width: 1620px;
	padding-top: 35vh;
	padding-bottom: 100px;
}

.work header,
.about header {
	max-width: 1220px;
	padding-top: 45vh;
}

.arrow a {
	text-decoration: none;
	font-size: 24px;
}

.arrow a:hover {
	opacity: 0.4;
}

h1 {
	font-weight: 700;
	font-size: 50px;
	line-height: 55px;
	padding: 20px 0 20px 0;
	margin: 0;
}

.home h1,
.home h2 {
	font-weight: 700;
	font-size: 50px;
	line-height: 55px;
	padding-bottom: 80px;
	color: #464646;
}

.home h1 a,
.home h2 a {
	text-decoration: none;
	opacity: 0.9;
}

.home h1 a:hover,
.home h2 a:hover {
	opacity: 0.4;
}

.work h1,
.about h1 {
	font-size: 140px;
	line-height: 150px;
}

h2 {
	font-weight: 300;
	font-size: 40px;
	line-height: 50px;
	padding: 0 0 10px 0;
	margin: 0;
}

h3 {
	font-weight: bold;
	font-size: 42px;
	line-height: 52px;
	padding: 20px 0 20px 0;
	margin: 0;
}

h4,
h5 {
	font-weight: bold;
	font-size: 10px;
	line-height: 18px;
	padding: 20px 0 0 0;
	margin: 0;
	text-transform: uppercase;
}

h4 {
	opacity: 0.2;
}

section {
	max-width: 680px;
}

.featured {
	max-width: 700px;
	padding-top: 40px;
	font-size: 28px;
	line-height: 36px;
}

section ul,
footer ul {
	list-style: none;
	padding: 0;
	margin: 0 0 20px 0;
	font-size: 14px;
}

.images {
	max-width: 1680px;
	padding: 25vh 0 140px 0;
}

.row {
	display: flex;
}

.bonus-row {
	display: flex;
	padding-top: 10vh;
}

.column-100 {
	flex: 100%;
	padding-right: 15px;
	padding-bottom: 45px;
}

.home .column-100,
.team .column-100 {
	padding-bottom: 0px;
}

.column-60 {
	flex: 60%;
	max-width: 1040px;
	padding-right: 15px;
}

.column-40 {
	flex: 40%;
	max-width: 615px;
	padding-right: 15px;
}

p.employable {
	font-weight: 300;
	font-size: 18px;
	line-height: 26px;
	padding: 20px 0 20px 0;
	max-width: 1280px;
}

p.caption,
ul.caption {
	padding: 10px 0 10px 0;
	font-size: 14px;
	line-height: 1.4;
}

.column-100 p.caption {
	padding-bottom: 20px;
}

.home .column-100 p.caption,
.team .column-100 p.caption {
	padding-bottom: 10px;
}

p.intro {
	font-size: 28px;
	line-height: 36px;
	padding-bottom: 10px;
}

blockquote {
	border-left: 1px solid rgb(221, 221, 221, 0.2);
	padding: 0 30px 0 20px;
	margin: 0;
}
blockquote p {
	opacity: 0.8;
}

hr {
	margin: 40px 0 20px 0;
	border-top: 1px solid #1a1a1a;
}

hr.large {
	margin: 50px 0 30px 0;
	border-top: 1px solid #1a1a1a;
	opacity: 0.8;
}

.opacity {
	opacity: 0.4;
}

.hover {
	text-decoration: none;
}

.uppercase {
	text-transform: uppercase;
}

.quote {
	padding-top: 8px;
	display: inline-block;
}

.desktop,
.menu {
	display: none;
}

.archived {
	max-width: 620px;
}

.archived table {
	padding-top: 80px;
	padding-bottom: 40px;
}

.archived p {
	font-size: 14px;
}

.ts-logos {
	background-color: #000000;
	padding: 20px;
}

.smallcaps {
	font-feature-settings: "c2sc", "smcp";
}

.logo {
	padding: 20px 0 20px 0;
}

.logo svg {
	width: 80px;
	padding-bottom: 10px;
}

.small {
	font-size: 14px;
}

.socials ul li {
	display: inline;
}

.socials p {
	padding-top: 20px;
	margin-bottom: 0px;
}
.zero {
	font-variant-numeric: slashed-zero;
}

footer {
	max-width: 680px;
	padding: 60px 0 0 0;
	font-size: 14px;
}

/* ==|== media queries ======================================================
   EXAMPLE Media Query for Responsive Design.
   This example overrides the primary ('mobile first') styles
   Modify as content requires.
   ========================================================================== */
@media only screen and (max-width: 2000px) {
	.home .container {
		background-image: none;
	}
	.attribution {
		display: none;
	}
}
@media only screen and (max-width: 1680px) {
	.home header {
		padding-top: 20vh;
		padding-bottom: 40px;
	}
	.home header h2 .hide {
		display: none;
	}
	.work header,
	.about header {
		padding-top: 55vh;
	}
	.home h1,
	.home h2 {
		font-size: 40px;
		line-height: 45px;
		padding-bottom: 40px;
	}
	.home h2 {
		max-width: 1300px;
	}
	nav ul {
		margin-right: 0%;
	}
	.images {
		max-width: 1540px;
	}
	.column-60 {
		flex: 65%;
	}
	.column-40 {
		flex: 35%;
	}
}
@media only screen and (max-width: 1380px) {
	header {
		padding-top: 30vh;
	}
	.home header {
		padding-top: 40vh;
	}
	.home header .hide {
		display: none;
	}
	.home header .desktop {
		display: inline;
	}
	.work h1,
	.about h1 {
		font-size: 100px;
		line-height: 110px;
	}
	.home header .arrow {
		padding-top: 40px;
	}
	.URL {
		margin-right: 10%;
	}
	.anchor {
		margin-left: 5%;
	}
}
@media only screen and (max-width: 1000px) {
	.anchor {
		display: none;
	}
	/* Mobile Menu */
	.menu .hide {
		display: none;
	}
	.menu {
		display: inline;
	}
	.mobile ul {
		overflow: hidden;
		position: relative;
		margin-top: 20px;
		padding: 20px 0px 30px 0;
		border-top: 1px solid #1a1a1a;
	}
	.mobile a {
		display: block;
		line-height: 1.6em;
	}
	.mobile a i.icon {
		display: block;
		position: absolute;
		right: 64px;
		top: 32px;
	}
	.mobile li.logo {
		padding-top: 80px;
		display: block;
	}
}
/* ... */

